// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextIcon Component should export, and handle icon variants: icon variant, ansible 1`] = `
<AnsibleTowerIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, canceled 1`] = `
<ErrorCircleOIcon
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, cancelled 1`] = `
<ErrorCircleOIcon
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, completed 1`] = `
<CheckCircleIcon
  color="#3e8635"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, created 1`] = `
<Spinner
  isSVG={true}
  style={
    Object {
      "display": "inline-block",
      "height": "1em",
      "width": "1em",
    }
  }
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, download 1`] = `
<DownloadIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, error 1`] = `
<ErrorCircleOIcon
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, failed 1`] = `
<ErrorCircleOIcon
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, idCard 1`] = `
<IdCardIcon
  color="#151515"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, info 1`] = `
<InfoCircleIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, network 1`] = `
<PficonNetworkRangeIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, openshift 1`] = `
<OpenshiftIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, paused 1`] = `
<ExclamationTriangleIcon
  color="#f0ab00"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, pencil 1`] = `
<PencilAltIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, pending 1`] = `
<Spinner
  isSVG={true}
  style={
    Object {
      "display": "inline-block",
      "height": "1em",
      "width": "1em",
    }
  }
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, running 1`] = `
<Spinner
  isSVG={true}
  style={
    Object {
      "display": "inline-block",
      "height": "1em",
      "width": "1em",
    }
  }
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, satellite 1`] = `
<PficonSatelliteIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, scans 1`] = `
<ClipboardCheckIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, sources 1`] = `
<CrosshairsIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, success 1`] = `
<CheckCircleIcon
  color="#3e8635"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, trash 1`] = `
<TrashIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, unknown 1`] = `
<UnknownIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, unreachable 1`] = `
<DisconnectedIcon
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, user 1`] = `
<UserIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, vcenter 1`] = `
<PficonVcenterIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, warning 1`] = `
<ExclamationTriangleIcon
  color="#f0ab00"
  noVerticalAlign={false}
  size="sm"
/>
`;

exports[`ContextIcon Component should export, and handle icon variants: variants 1`] = `
Object {
  "ansible": "ansible",
  "canceled": "failed",
  "cancelled": "failed",
  "completed": "success",
  "created": "pending",
  "download": "download",
  "error": "failed",
  "failed": "failed",
  "idCard": "idCard",
  "info": "info",
  "network": "network",
  "openshift": "openshift",
  "paused": "warning",
  "pencil": "pencil",
  "pending": "pending",
  "running": "pending",
  "satellite": "satellite",
  "scans": "scans",
  "sources": "sources",
  "success": "success",
  "trash": "trash",
  "unknown": "unknown",
  "unreachable": "unreachable",
  "user": "user",
  "vcenter": "vcenter",
  "warning": "warning",
}
`;

exports[`ContextIcon Component should render a basic component with default props: basic 1`] = `
<UnknownIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;
